--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/sport.jpeg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">In Ukraine, most of my life i was engaged in martial arts, participated in the organization of all-Ukrainian and international Aikido competitions, taught children martial arts, and also organized children's summer sports camps</p>
+                                    <p class="mb-4">In Ukraine, most of my life I was engaged in martial arts, participated in the organization of all-Ukrainian and international Aikido competitions, taught children martial arts, and also organized children's summer sports camps.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -406,7 +406,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/coding.jpeg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">After graduating from school 42 - I did one year internship at a startup "Make IT Cool", where I participated in the creation of an iOS application using the Swift programming language. After completing the internship as an iOS developer, I continued my journey in learning new technologies: I chose the path as a QA Engineer and worked on a freelance project in Ukraine. Considering my different knowledge in programming languages, interest in writing tests, as well as the desire to participate not only in development proccess and testing, but also to participate in organizing a team, communicating with customers and establishing work processes.</p>
+                                    <p class="mb-4">After graduating from school 42 - I did one year internship at a startup "Make IT Cool", where I participated in the creation of an iOS application using the Swift programming language. After completing the internship as an iOS developer, I continued my journey in learning new technologies: I chose the path as a QA Engineer and worked on a freelance project in Ukraine. Considering my different experience with different programming languages, interest in writing tests, as well as the desire to participate not only in the development and testing process, but also to participate in team building, communication with customers and establishing workflows, I see myself in the next few years as an QA Engineer..</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -438,7 +438,7 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/travel.jpeg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">My first travels were when I was 18 years old in Ukraine. Every year I tried to visit 2-3 countries, studying cultural features, some words in the local language, photographing nature and animals, and also talked about sightseeing while traveling on my blog.</p>
+                                    <p class="mb-4">My first travels were when I was 18 years old in Ukraine. Every year I tried to visit 2-3 countries, studying cultural features, some words in the local language, photographing nature and animals, and also talked about sightseeing while traveling on my blog. I visited 26 countries, including Eastern and Western European countries, as well as Asian countries such as: Thailand, India, Indonesia, Singapore, Malaysia and Sri Lanka.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
