--- a/index.html
+++ b/index.html
@@ -137,15 +137,15 @@
                     <div class="col-lg-4 ms-auto"><p class="lead">
                         My name is Hanna. I’m Quality Assurance engineer.👩‍💻
 This portfolio is a complement to my CV to share information about my professional experience, activities, sports achievements and travels.
-I was engaged in NGO events and sport activities since my students life in Ukraine 🇺🇦 and abroad.  I have visited 30 countries and really passionate to explore different cultures and traditions &#1F30D.
+I was engaged in NGO events and sport activities since my students life in Ukraine and abroad.  I have visited 30 countries and really passionate to explore different cultures and traditions 🌍.
                     </p></div>
                     <div class="col-lg-4 me-auto"><p class="lead"> 
-                        Currently I live in Sweden &#🇸🇪 and enjoy beautiful nature &#1F333, clear air and communication with a very kind and pleasant people here.
+                        Currently I live in Sweden and enjoy beautiful nature 🌳, clear air and communication with a very kind and pleasant people here.
 I always fond of sharing useful information with people and this desire is leaded me to conduct sessions and consultation about technologies, which includes such topics: “types of IT jobs”, “directions in IT industry”, “individual consultations how to become an IT specialist”.
 
-Contact me &#2709 in case of taking part in IT events, participation in non-governmental activities, sports, martial arts and yoga training and organising various volunteering activities.
+Contact me ✉ in case of taking part in IT events, participation in non-governmental activities, sports, martial arts and yoga training and organising various volunteering activities.
 
-Wish you good luck and may the force be with you. :ninja:     
+Wish you good luck and may the force be with you. 🥷     
                     </p></div>
                 </div>
                 <!-- About Section Button-->
