fix emojies with car

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ I always fond of sharing useful information with people and this desire is leade
 
 Contact me ✉ in case of taking part in IT events, participation in non-governmental activities, sports, martial arts and yoga training and organising various volunteering activities.
 
-Wish you good luck and may the force be with you. 🥷     
+Wish you good luck and may the force be with you. 🐱‍👤     
                     </p></div>
                 </div>
                 <!-- About Section Button-->
