fix text errors

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Programming- Activity - Travel</p>
+                <p class="masthead-subheading font-weight-light mb-0">Programming - Activity - Travel</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -236,7 +236,7 @@ Wish you good luck and may the force be with you. 🐱‍👤
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Location</h4>
                         <p class="lead mb-0">
-                            Helsingborg, Sweden
+                            Malmö, Sweden
                             <br />
                         </p>
                     </div>
@@ -315,7 +315,7 @@ Wish you good luck and may the force be with you. 🐱‍👤
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/programming.jpeg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">I started learning programming in 2017, when I entered French School 42. There we had no teachers, but there were special training programs, team projects in which I participated. My studies at school 42 lasted 4 years, during the course of my studies I learned the basics of programming, learned how to work with the command line, git, mastered the low-level programming language C, which helped me better understand computer processes, also had basic knowledge of the C++ programming language and Swift. 
+                                    <p class="mb-4">I started learning programming in 2017, when I entered French School 42. There we had no teachers, but there were special training programs, team projects in which I participated. My studies at school 42 lasted 4 years, during the course of my studies I learned the basics of programming, learned how to work with the terminal, git, mastered the low-level programming language C, which helped me better understand computer processes, also had basic knowledge of the C++ programming language and Swift. 
                                     I also had a half year internship at Epam as an QA engineer. I participated in international competitions "Google Hash Code 2018" and participated in various "Cyber School" meetups in Ukraine.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
@@ -377,9 +377,7 @@ Wish you good luck and may the force be with you. 🐱‍👤
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/img/portfolio/participate.jpeg" alt="..." />
-                                    <!-- Portfolio Modal - Text-->
+                                    
                                     <p class="mb-4">I really love volunteering and took part in various volunteer movements in Ukraine and abroad, such as "No Hate Speech Movements", "Kozachenki" and others. While volunteering in public organizations, I took part in the organization of various events, agreements with participants and speakers, assistance in organizing children at events.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
@@ -412,7 +410,7 @@ Wish you good luck and may the force be with you. 🐱‍👤
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/coding.jpeg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">After graduating from school 42 - I did one year internship at a startup "Make IT Cool", where I participated in the creation of an iOS application using the Swift programming language. After completing the internship as an iOS developer, I continued my journey in learning new technologies: I chose the path as a QA Engineer and worked on a freelance project in Ukraine. Considering my different experience with different programming languages, interest in writing tests, as well as the desire to participate not only in the development and testing process, but also to participate in team building, communication with customers and establishing workflows, I see myself in the next few years as an QA Engineer..</p>
+                                    <p class="mb-4">After graduating from school 42 - I did one year internship at a startup "Make IT Cool", where I participated in the creation of an iOS application using the Swift programming language. After completing the internship as an iOS developer, I continued my journey in learning new technologies: I chose the path as a QA Engineer and worked on a freelance project in Ukraine. Considering my different experience with different programming languages, interest in writing tests, as well as the desire to participate not only in the development and testing process, but also to participate in team building, communication with customers and establishing workflows, I see myself in the next few years as an QA Engineer.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
@@ -444,7 +442,7 @@ Wish you good luck and may the force be with you. 🐱‍👤
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/travel.jpeg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">My first travels were when I was 18 years old in Ukraine. Every year I tried to visit 2-3 countries, studying cultural features, some words in the local language, photographing nature and animals, and also talked about sightseeing while traveling on my blog. I visited 26 countries, including Eastern and Western European countries, as well as Asian countries such as: Thailand, India, Indonesia, Singapore, Malaysia and Sri Lanka.</p>
+                                    <p class="mb-4">My first travels were when I was 18 years old in Ukraine. Every year I tried to visit 2-3 countries, studying cultural features, some words in the local language, photographing nature and animals, and also talked about sightseeing while traveling on my blog. I visited 28 countries, including Eastern and Western European countries, as well as Asian countries such as: Thailand, India, Indonesia, Singapore, Malaysia and Sri Lanka.</p>
                                     <button class="btn btn-primary" href="#!" data-bs-dismiss="modal">
                                         <i class="fas fa-times fa-fw"></i>
                                         Close Window
